<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.Drawer.ArrowAnimation"
        app:titleTextColor="@android:color/white"/>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/main_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/main_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_main"/>
        </android.support.v4.widget.SwipeRefreshLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/gray_main"
            android:clickable="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_show"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="@android:color/holo_blue_dark"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/set_head"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/head_female"/>

                <TextView
                    android:id="@+id/set_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="李雪洋"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_my_leave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_show"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_for_ll"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/qingjia"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="center|left"
                    android:text="@string/my_leave"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:typeface="serif"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_my_shenpi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_my_leave"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_for_ll"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/shenpi"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="center|left"
                    android:text="@string/my_shenpi"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:typeface="serif"/>
            </LinearLayout>


            <Button
                android:id="@+id/btn_exit_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_for_exit"
                android:text="@string/user_exit"
                />

        </RelativeLayout>
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>
